--- a/todoproject/templates/home.html
+++ b/todoproject/templates/home.html
@@ -30,17 +30,21 @@
             </form>
         </div>
 
-        <div  class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div  class="bar">
-                        <a href="cbvdet"
-                    </div>
+
+        <div  class="col-md-6">
+        <h4>Task to be done</h4>
+        {% for  task in task1 %}
+            <div class="shadow card">
+                <div  class="card-body">
+                    <h6  class = 'card-title'>{{task.task}}</h6>
+                    <p ><b>{{task.priority}}</b></p>
+                    <p ><b>{{task.date}}</b></p>
+                    <a  class="btn btn-danger"   href="{%   url  'delete'  task.id  %}">done</a>
+                    <a  class="btn btn-success"  href="{%  url  'update'  task.id  %}">edit</a>
 
                 </div>
             </div>
-
-        </div>
+    {%  endfor  %}
     </div>
 </div>
 {%  endblock  %}
