--- a/ecommproject/templates/footer.html
+++ b/ecommproject/templates/footer.html
@@ -1,3 +1,5 @@
-<div  class="footer navbar-fixed-bottom    my_footer">
+<footer class="bottom">
+<div  class="footer navbar-fixed-bottom   my_footer">
    <p  class="text-center"> &copy;  myshox fashions. All rights reserved</p>
 </div>
+   </footer>
