--- a/ecommproject/templates/category.html
+++ b/ecommproject/templates/category.html
@@ -29,7 +29,7 @@
     {%  endif  %}
 <div>
     {%  if  category  %}
-            <img class= "my_image"  src="{{category.image.url}}"  alt="{{category.name}}">
+            <img class= "my_image"  src="{{category.image.url}}"  alt="{{category.name}}"  style="width:100%;height:300px;">
 </div>
 <br>
 <div>
@@ -38,7 +38,7 @@
 </div>
     {%  else  %}
 <div>
-                <img  class="my_image   my_image_padding" src="{%  static  'img/myshopx.jpg'  %}"  alt="Our Products"  width="1190px;"   height="705px">
+                <img  class="my_image   my_image_padding" src="{%  static  'img/myshopx.jpg'  %}"  alt="Our Products"  style="width:100%;height:400px;">
 </div>
 <br>
 <div>
