--- a/libraryx/templates/detail.html
+++ b/libraryx/templates/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'  %}
 {% block body  %}
-<div class="container" style="color:white;">
+<div class="container">
     <div class="row">
         <div class="col-md-6">
             <br>
